Fix input takes up space when collapsed w flexbox

--- a/hidden-search/style.css
+++ b/hidden-search/style.css
@@ -17,6 +17,7 @@ body {
   background-color: black;
   padding: 12px 7px;
   border-radius: 10px;
+  display: flex;
 }
 .search-input {
   font-family: "Outfit", sans-serif;
@@ -26,7 +27,6 @@ body {
   border: none;
   border-width: 0;
   padding: 0px;
-  margin-left: -3px;
   width: 0px;
 
   transition: all 0.4s ease;
